RESOLVED FIXED255741
REGRESSION (262243@main): LFC enters a broken, semi-enabled state after rendering scrollbars
https://bugs.webkit.org/show_bug.cgi?id=255741
Summary REGRESSION (262243@main): LFC enters a broken, semi-enabled state after rende...
Wenson Hsieh
Reported 2023-04-20 12:23:11 PDT
Attachments
Wenson Hsieh
Comment 1 2023-04-20 12:37:28 PDT
EWS
Comment 2 2023-04-21 07:14:54 PDT
Committed 263241@main (337e6bee8615): <https://commits.webkit.org/263241@main> Reviewed commits have been landed. Closing PR #12987 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.